--- a/templates/views/doctors.hbs
+++ b/templates/views/doctors.hbs
@@ -127,7 +127,9 @@
                                                                 </div>
                                                             </td>
                                                             <td>
-                                                                <button class="btn-primary">Book Appointment</button>
+                                                                <button class="btn-primary"
+                                                                    onclick="location.href = '/bookappointment';">Book
+                                                                    Appointment</button>
                                                             </td>
                                                         </tr>
                                                     </template>
