--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -59,7 +59,7 @@
                             <p>Instead of waiting in lines and wasting time, seeing a doctor online for any kind of
                                 periodical consultations seems to be a great option. And all that at a reasonable price
                                 with our team of best doctors!</p>
-                            <a href="#" class="btn_2">Make an appointment</a>
+                            <a href="/doctors" class="btn_2">Make an appointment</a>
                         </div>
                     </div>
                 </div>
