--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -77,7 +77,7 @@
                                     <a class="nav-link" href="/about">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/contact">Contact</a>
+                                    <a class="nav-link" href="/faq">FAQ</a>
                                 </li>
                             </ul>
                             <a class="btn_2 d-lg-block ms-auto" id="login-register-btn" href="/login">Login/Register</a>
