--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -93,9 +93,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <p class="footer-text m-0 col-lg-8 col-md-12">
-                        Copyright &copy;2022. All rights reserved &emsp;|&emsp; Made with ❤️ by <span
-                            class="name">Nitigya
-                            Joshi</span></p>
+                        Copyright &copy;2022. All rights reserved &emsp;|&emsp; Made with ❤️ by <span class="name">Team
+                            41</span></p>
                     <div class="col-lg-4 col-md-12 text-center text-lg-right footer-social">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-youtube"></i></a>
