--- a/templates/views/404page.hbs
+++ b/templates/views/404page.hbs
@@ -31,7 +31,7 @@
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!-- aos animation-->
 
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/404.css" />
 
     <!-- Bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -45,11 +45,10 @@
 
 <body>
     {{>header}}
-    <div>
-        <p>{{message}}</p>
-    </div>
+    <h1 class="container404">
+        404 Error
+    </h1>
     {{>footer}}
-
     <script>
         AOS.init();
     </script>
