--- a/templates/views/aboutus.hbs
+++ b/templates/views/aboutus.hbs
@@ -25,7 +25,7 @@
                     <h3>Sudeep Gangwar</h3>
                     <ul class="sci">
                         <li style="--i:1">
-                            <a href="https://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -39,7 +39,7 @@
                     <h3>Gulshan Kumar</h3>
                     <ul class="sci">
                         <li style="--i:1">
-                            <a href="https://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
 
                     </ul>
                 </div>
@@ -52,7 +52,7 @@
                     <h3>Anmol Singh</h3>
                     <ul class="sci">
                         <li style="--i:1">
-                            <a href="https://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
 
                     </ul>
                 </div>
@@ -66,7 +66,7 @@
                     <h3>Nitigya joshi</h3>
                     <ul class="sci">
                         <li style="--i:1">
-                            <a href="https://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
 
                     </ul>
                 </div>
@@ -79,7 +79,7 @@
                     <h3>Aryan Verma</h3>
                     <ul class="sci">
                         <li style="--i:1">
-                            <a href="https://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
 
                     </ul>
                 </div>
