--- a/templates/views/doctors.hbs
+++ b/templates/views/doctors.hbs
@@ -56,7 +56,7 @@
                                             <div class="col-lg-6">
                                                 <div class="records">Showing: <span
                                                         id="current-records"><b>1-4</b></span> of
-                                                    <span id="total-records"><b>48</b></span> result
+                                                    <span id="total-records"><b>4</b></span> result
                                                 </div>
                                             </div>
                                             <div class="col-lg-6">
@@ -86,7 +86,7 @@
                                                             </td>
                                                             <td>
                                                                 <div class="doctor-table-name">
-                                                                    <a href="#" id="doctor-name"></a>
+                                                                    <a href="/doctorprofile" id="doctor-name"></a>
                                                                     <p class="m-0">
                                                                         <span class="text-muted edu"
                                                                             id="doctor-edu"></span>
