--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -50,17 +50,17 @@
                             <div class="mb-4 ms-3 d-flex flex-row">
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                        id="gender_checkbox" value="Male">
+                                        id="gender_checkbox1" value="Male">
                                     <label class="form-check-label" for="male">Male</label>
                                 </div>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                        id="gender_checkbox" value="Female">
+                                        id="gender_checkbox2" value="Female">
                                     <label class="form-check-label" for="female">Female</label>
                                 </div>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                        id="gender_checkbox" value="Other">
+                                        id="gender_checkbox3" value="Other">
                                     <label class="form-check-label" for="other">Other</label>
                                 </div>
                             </div>
@@ -102,8 +102,6 @@
         </div>
     </section>
     <script src="/js/register.js"></script>
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-
 
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
