final-almost-for-mid-review

--- a/public/css/doctor.css
+++ b/public/css/doctor.css
@@ -3,66 +3,85 @@ body{
     margin-top: 20px;
 }
 
+.btn-success {
+  font-family: Raleway-SemiBold;
+  font-size: 13px;
+  color: rgba(103, 192, 103, 0.75);
+  letter-spacing: 1px;
+  line-height: 15px;
+  border: 2px solid rgba(103, 192, 103, 0.75);
+  border-radius: 10px;
+  background: transparent;
+  padding: 4px;
+  transition: all 0.3s ease 0s;
+}
+
+.btn-success:hover {
+  color: #FFF;
+  background: rgb(103, 192, 103, 0.75);
+  border: 2px solid rgb(103, 192, 103, 0.75);
+}
+
 .doctorlist-container{
   margin-top: 100px;
 }
 
-.doctor-table {
+.doctor-table{
   color: #3c4142;
   font-weight: 400;
 }
 
 
-.doctor-table .doctor-table-img img {
+.doctor-table-img img {
   width: 35px;
   height: 35px;
   border-radius: 50%;
 }
 
-.doctor-table .doctor-table-name {
+.doctor-table-name {
   min-width: 200px;
 }
 
-.doctor-table .doctor-table-name a {
+.doctor-table-name a {
   font-weight: 400;
   font-size: 0.875rem;
   color: #3c4142;
   line-height: 1.5;
 }
 
-.doctor-table .doctor-table-name a:hover {
+.doctor-table-name a:hover {
   color: #68CBD7;
   text-decoration: none;
 }
 
-.doctor-table .doctor-table-name .edu {
+.doctor-table-name .edu {
   font-size: 12px;
   font-weight: 400;
 }
 
-.doctor-table .doctor-table-location {
+.doctor-table-location {
   min-width: 100px;
   font-weight: 400;
 }
 
-.doctor-table .doctor-table-location p {
+.doctor-table-location p {
   line-height: 1.5;
   color: #3c4142;
   font-size: 0.8125rem;
 }
 
-.doctor-table .doctor-table-location .location {
+.doctor-table-location .location {
   color: #3c4142;
 }
 
-.doctor-table .doctor-table-fee {
+.doctor-table-fee {
   min-width: 70px;
   font-weight: 400;
   color: #3c4142;
   font-size: 0.8125rem;
 }
 
-.doctor-table .doctor-table-job-category {
+.doctor-table-job-category {
   padding: .5rem;
   display: inline-flex;
   white-space: nowrap;
@@ -70,15 +89,15 @@ body{
 }
 
 
-.doctor-table .doctor-table-job-category span {
+.doctor-table-job-category span {
   font-size: 0.8125rem;
   color: #3c4142;
   font-weight: 600;
 }
-.doctor-table .doctor-table-job-rating{
+.doctor-table-job-rating{
     font-size: 0.8125rem;
 }
-.doctor-table .doctor-table-job-rating svg {
+.doctor-table-job-rating svg {
   width: 20px;
   height: 20px;
   color: #fd8b2c;
@@ -121,41 +140,40 @@ body{
   border: 0;
 }
 
-
 .search-body {
   margin-bottom: 1.5rem;
 }
 
-.search-body .search-result .result-header {
+.result-header {
   margin-bottom: 2rem;
 }
 
-.search-body .search-result .result-header .records {
+.result-header .records {
   color: #3c4142;
 }
 
-.search-body .search-result .result-header .result-actions {
+.result-header .result-actions {
   text-align: right;
   display: flex;
   align-items: center;
   justify-content:end;
 }
 
-.search-body .search-result .result-header .result-actions .result-sorting {
+.result-sorting {
   display: flex;
   align-items: center;
 }
 
-.search-body .search-result .result-header .result-actions .result-sorting span {
+.result-sorting span {
   flex-shrink: 0;
   font-size: 0.8125rem;
 }
 
-.search-body .search-result .result-header .result-actions .result-sorting select {
+.result-sorting select {
   color: #68CBD7;
 }
 
-.search-body .search-result .result-header .result-actions .result-sorting select option {
+.result-sorting select option {
   color: #3c4142;
 }
 
@@ -163,24 +181,7 @@ body{
     margin-bottom: 1.875rem;
 }
 
-.card {
-    border: 0;
-    box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
-    -ms-box-shadow: 0px 0px 10px 0px rgba(82, 63, 105, 0.1);
-} */
- .card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #ffffff;
-    background-clip: border-box;
-    border: 1px solid #e6e4e9;
-    border-radius: 8px;
-}
+
 
 .hide {
   display: none;
