--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -7,12 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaidya Healthcare</title>
 
-    <!-- Website icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon_io/apple-touch-icon.png?v=2">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon_io/favicon-32x32.png?v=2">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon_io/favicon-16x16.png?v=2">
-    <link rel="manifest" href="/img/favicon_io/site.webmanifest?v=2">
-
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -79,9 +73,14 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/faq">FAQ</a>
                                 </li>
+                                <li>
+                                    <a class="btn_2 d-lg-block ms-auto mt-3 mx-2" id="login-register-btn"
+                                        href="/login">Login/Register</a>
+                                </li>
+                                <li>
+                                    <a class="btn_2 d-lg-block ms-auto mt-3" id="logout-btn" href="/login">Logout</a>
+                                </li>
                             </ul>
-                            <a class="btn_2 d-lg-block ms-auto" id="login-register-btn" href="/login">Login/Register</a>
-                            <a class="btn_2 d-lg-block ms-auto" id="logout-btn" href="/login">Logout</a>
                         </div>
                     </nav>
                 </div>
