--- a/templates/views/doctorprofile.hbs
+++ b/templates/views/doctorprofile.hbs
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>doctors_profile</title>
-    <link rel="shortcut icon" href="/img/userprofile_logo.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/doctorprofile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
@@ -16,16 +15,16 @@
 
 <body>
     {{>header}}
-    <div class="doctorprofile-container container">
+    <div class="doctorprofile-container">
         <div class="row justify-content-center">
             <div class="col-md-7 col-lg-4 mb-5 mb-lg-0 wow fadeIn">
                 <div class="card border-0 shadow">
                     <div class="profile-pic-div">
                         <img src="/img/unknown.png" id="photo" style="max-width: 200px; max-height: 400px;">
                     </div>
-                    <div class="card-body p-1-9 p-xl-5">
+                    <div class="card-body p-1-9 p-xl-5 nameAddress">
                         <div class="mb-4">
-                            <h3 class="h4 mb-0">Dr Gulati</h3>
+                            <h3 class="h4 mb-0">Dr Ashish Gulati</h3>
                             <span class="text-primary">General Physician</span>
                         </div>
                         <ul class="list-unstyled mb-4">
@@ -44,37 +43,31 @@
                 <div class="ps-lg-1-6 ps-xl-5">
                     <div class="mb-5 wow fadeIn">
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Category: General Physician</li>
-                            <li class="list-group-item">Language: Hindi/English</li>
-                            <li class="list-group-item">Consultant Fess: 400</li>
-                            <li class="list-group-item">No service in home</li>
+                            <li class="list-group-item description">Category: General Physician</li>
+                            <li class="list-group-item description">Language: Hindi/English</li>
+                            <li class="list-group-item description">Consultant Fess: 400</li>
+                            <li class="list-group-item description">No service in home</li>
                         </ul>
                     </div>
                     <div class="mb-5 wow fadeIn">
-                        <div class="text-start mb-1-6 wow fadeIn">
-                            <h2 class="mb-0 text-primary">#Education</h2>
-                        </div>
                         <div class="row mt-n4">
                             <div class="col-sm-6 col-xl-4 mt-4">
                                 <div class="card text-center border-0 rounded-3">
-                                    <div class="card-body">
+                                    <div class="card-body education">
+                                        <h2 class="mb-0 text-primary">#Education</h2>
                                         <i class="ti-bookmark-alt icon-box medium rounded-3 mb-4"></i>
-                                        <h3 class="h5 mb-3">Education</h3>
                                         <p class="mb-0">All India institute of medical scinece, New Delhi</p>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="text-start mb-1-6 wow fadeIn">
-                            <h2 class="mb-0 text-primary">#Experience</h2>
-                        </div>
-                        <div class="col-sm-6 col-xl-4 mt-4">
-                            <div class="card text-center border-0 rounded-3">
-                                <div class="card-body">
-                                    <i class="ti-medall-alt icon-box medium rounded-3 mb-4"></i>
-                                    <h3 class="h5 mb-3">Experience</h3>
-                                    <p class="mb-0">About 10 years of experience and professional in general Physician
-                                    </p>
+                            <div class="col-sm-6 col-xl-4 mt-4">
+                                <div class="card text-center border-0 rounded-3">
+                                    <div class="card-body experience">
+                                        <h2 class="mb-0 text-primary">#Experience</h2>
+                                        <i class="ti-medall-alt icon-box medium rounded-3 mb-4"></i>
+                                        <p class="mb-0">About 10 year Experience and professional in general Physician.
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
