--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -79,7 +79,7 @@
     </div>
 
     <section class="bg-light page2">
-        <div class="page-section pb-0 about_us">
+        <div class="page-section about_us">
             <div class="container">
                 <div class="row align-items-center">
 
@@ -116,7 +116,7 @@
                 <div class="col-lg-3 col-sm-12">
                     <div class="single_feature">
                         <div class="single_feature_part" data-aos="fade-right" data-aos-duration="1300"
-                            onclick="location.href='video-call.html';">
+                            onclick="location.href='/video-call';">
                             <span class="single_feature_icon"><img src="/img/video-call.png" alt=""></span>
                             <h4>Live doc</h4>
                             <p>Connect securely anytime, anywhere with 24*7 doctors available just for you. Completely
@@ -124,7 +124,8 @@
                         </div>
                     </div>
                     <div class="single_feature">
-                        <div class="single_feature_part" data-aos="fade-right" data-aos-duration="1300">
+                        <div class="single_feature_part" data-aos="fade-right" data-aos-duration="1300"
+                            onclick="location.href='/bookappointment';">
                             <span class="single_feature_icon"><img src="/img/appointment.png" alt=""></span>
                             <h4>Appointments</h4>
                             <p>Book appointments with our certified partner doctors, clinics, hospitals and receive
@@ -133,7 +134,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                    <div class="single_feature_img" data-aos="zoom-in" data-aos-duration="1300">
+                    <div class="single_feature_img" data-aos="zoom-in" data-aos-duration="1300"
+                        onclick="location.href='/forum';">
                         <img src="/img/doctor_5.png" alt="services">
                     </div>
                 </div>
@@ -157,11 +159,10 @@
                 </div>
             </div>
         </div>
-
     </section>
 
     <div class="heading justify-content-center d-flex" data-aos="flip-right" data-aos-duration="1300">
-        <h2>&nbsp;Pricing</h2>
+        <h2>Pricing</h2>
     </div>
 
     <div id="price" class="section pr">
@@ -178,10 +179,10 @@
                                             <h3>₹300 / one-time</h3>
                                         </div>
                                         <div class="pricing-table-features">
-                                            <p><i class="fa fa-envelope-o"></i> <strong>30 mins</strong> Appointment</p>
+                                            <p><i class="fa fa-clock"></i> <strong>30 mins</strong>
+                                                Appointment</p>
                                             <p><i class="fa fa-rocket"></i> <strong>1</strong> appointment</p>
-                                            <p><i class="fa fa-database"></i> <strong>140</strong> Databases</p>
-                                            <p><i class="fa fa-link"></i> <strong>60</strong> Domains</p>
+
                                         </div>
                                         <div class="pricing-table-sign-up">
                                             <a href="#contact" data-scroll="" class="btn btn_2">Buy Now</a>
@@ -200,10 +201,9 @@
                                             <p>Premium service for our <strong>VIP</strong> patients.</p>
                                         </div>
                                         <div class="pricing-table-features">
-                                            <p><i class="fa fa-envelope-o"></i> <strong>2 hr</strong> Appointment</p>
+                                            <p><i class="fa fa-clock"></i> <strong>30 mins</strong>
+                                                Appointment</p>
                                             <p><i class="fa fa-rocket"></i> <strong>20</strong> appointments/month</p>
-                                            <p><i class="fa fa-database"></i> <strong>xx</strong> yyy</p>
-                                            <p><i class="fa fa-link"></i> <strong>xx</strong> yyy</p>
                                             <p><i class="fa fa-life-ring"></i> <strong>24/7 Unlimited</strong> Support
                                             </p>
                                         </div>
@@ -221,8 +221,6 @@
                                         <div class="pricing-table-features">
                                             <p><i class="fa fa-envelope-o"></i> <strong>1 hr</strong> Appointment</p>
                                             <p><i class="fa fa-rocket"></i> <strong>10</strong> appointments/month</p>
-                                            <p><i class="fa fa-database"></i> <strong>140</strong> Databases</p>
-                                            <p><i class="fa fa-link"></i> <strong>60</strong> Domains</p>
                                             <p><i class="fa fa-life-ring"></i> <strong>24/7 Unlimited</strong> Support
                                             </p>
                                         </div>
