--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -2,7 +2,7 @@
     position: relative;
     overflow: hidden;
     background-color: rgba(137, 219, 173, 0.61);
-    background-image: url(../img/wavy-pattern.png);
+    background-image: url(/img/wavy-pattern.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: center;
