--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -7,11 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaidya Healthcare</title>
 
-    <!-- Website icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon_io/apple-touch-icon.png?v=2">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon_io/favicon-32x32.png?v=2">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon_io/favicon-16x16.png?v=2">
-    <link rel="manifest" href="/img/favicon_io/site.webmanifest?v=2">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,7 +45,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="logo padding">
-                            <a href=""><img src="/img/logo.png" alt=""></a>
+                            <img src="/img/logo.png" alt="">
                             <p>
                                 No need of waiting. Now doctor uncle is just one click away. Get instant consultations
                                 at low
@@ -65,7 +60,7 @@
                                 Chittoor,
                                 A.P., 517646, India</p>
                             <p><i class="fa fa-paper-plane" aria-hidden="true"></i> info@vaidya.com</p>
-                            <p><i class="fa fa-phone" aria-hidden="true"></i> (+91) 9171454185</p>
+                            <p><i class="fa fa-phone" aria-hidden="true"></i> (+91) 6969696969</p>
                         </div>
                     </div>
                     <div class="col-md-4 space">
