--- a/templates/views/userprofile.hbs
+++ b/templates/views/userprofile.hbs
@@ -10,16 +10,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/userprofile.css">
 
-<body>
-
+<body class="userProfileMain">
     {{>header}}
-
     <div class="container">
         <div class="main-body">
             <div class="row gutters-sm">
                 <div class="col-md-4 mb-3">
                     <div class="card">
-                        <div class="card-body">
+                        <div class="card-body photoColumn">
                             <div class="d-flex flex-column align-items-center text-center">
                                 <div class="profile-pic-div">
                                     <img src="/img/unknown.png" id="photo" style="max-width: 200px; max-height: 400px;">
@@ -28,65 +26,53 @@
                                     <label for="file" id="uploadBtn">Choose Photo</label>
                                 </div>
                                 <div class="mt-3">
-                                    <h4 id="profilefullname">Radhe Shyam</h4>
-                                    <p class="text-muted font-size-sm" id="profileaddress">Sarojni nagar, New Delhi
-                                        India</p>
+                                    <h4 id="profilefullname"></h4>
+                                    <p class="text-muted font-size-sm" id="profileaddress"></p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 dataColumn">
                     <div class="card mb-3">
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-sm-3">
+                                <div class="col-sm-3 rowProfileColumn">
                                     <h2 class="mb-0">Full Name</h2>
                                 </div>
-                                <div class="col-sm-9 text-secondary edit" contenteditable="false" id="fullname"
-                                    style="text-align: left; width: auto; padding-right: 15px; padding-left: 15px; margin-left: 10px; margin-right: 10px;">
-
+                                <div class="col-sm-9 text-secondary edit" id="fullname">
                                 </div>
                             </div>
                             <hr>
                             <div class="row">
-                                <div class="col-sm-3">
+                                <div class="col-sm-3 rowProfileColumn">
                                     <h2 class="mb-0">Email</h2>
                                 </div>
-                                <div class="col-sm-9 text-secondary edit" contenteditable="false" id="email"
-                                    style="text-align: left; width: auto; padding-right: 15px; padding-left: 15px; margin-left: 10px; margin-right: 10px;">
-
+                                <div class="col-sm-9 text-secondary edit" id="email">
                                 </div>
                             </div>
                             <hr>
                             <div class="row">
-                                <div class="col-sm-3">
+                                <div class="col-sm-3 rowProfileColumn">
                                     <h2 class="mb-0">Username</h2>
                                 </div>
-                                <div class="col-sm-9 text-secondary edit" contenteditable="false" id="username"
-                                    style="text-align: left; width: auto; padding-right: 15px; padding-left: 15px; margin-left: 10px; margin-right: 10px;">
-
+                                <div class="col-sm-9 text-secondary edit" id="username">
                                 </div>
                             </div>
                             <hr>
                             <div class="row">
-                                <div class="col-sm-3">
+                                <div class="col-sm-3 rowProfileColumn">
                                     <h2 class="mb-0">Mobile</h2>
                                 </div>
-                                <div class="col-sm-9 text-secondary edit" contenteditable="false" id="mobile"
-                                    style="text-align: left; width: auto; padding-right: 15px; padding-left: 15px; margin-left: 10px; margin-right: 10px;">
-
+                                <div class="col-sm-9 text-secondary edit" id="mobile">
                                 </div>
                             </div>
                             <hr>
                             <div class="row">
-                                <div class="col-sm-3">
+                                <div class="col-sm-3 rowProfileColumn">
                                     <h2 class="mb-0">Address</h2>
                                 </div>
-                                <div class="col-sm-9 text-secondary edit form-outline mb-4" contenteditable="false"
-                                    id="address"
-                                    style="text-align: left; width: auto; padding-right: 15px; padding-left: 15px; margin-left: 10px; margin-right: 10px;">
-
+                                <div class="col-sm-9 text-secondary edit form-outline mb-4" id="address">
                                 </div>
                             </div>
                             <hr>
@@ -104,7 +90,7 @@
                             <div class="card h-100">
                                 <div class="card-body">
                                     <h2 class="d-flex align-items-center mb-3">
-                                        <h2>Appointment History</h2>
+                                        <h2 class="appointmentHistory">Appointment History</h2>
                                     </h2>
                                     <p>There has been no booking made by you</p>
                                 </div>
