added payment and contactus page

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -73,6 +73,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/faq">FAQ</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/contactus">Contact</a>
+                                </li>
                                 <li>
                                     <a class="btn_2 d-lg-block ms-auto mt-3 mx-2" id="login-register-btn"
                                         href="/login">Login/Register</a>
