added contactus backend

--- a/public/css/contactus.css
+++ b/public/css/contactus.css
@@ -4,6 +4,7 @@
     height: 100vh;
     background-color: #001660;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 0;
@@ -12,6 +13,8 @@
     box-sizing: border-box;
     font-size: 'poppins',sans-serif;
 }
+
+
 form
 {
     background: #fff;
