--- a/templates/views/contactus.hbs
+++ b/templates/views/contactus.hbs
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/contactus.css">
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <title>Contact Us</title>
@@ -21,6 +23,7 @@
             <textarea id="message" rows="4" placeholder="How can we help you...." required></textarea>
             <button type="submit" id="btn">Submit</button>
         </form>
+
     </div>
     {{>footer}}
     <script src="https://smtpjs.com/v3/smtp.js"></script>
