--- a/templates/views/payment.hbs
+++ b/templates/views/payment.hbs
@@ -41,8 +41,8 @@
                                         placeholder="&#9679;&#9679;&#9679;" size="1" minlength="3" maxlength="3"
                                         required>
                                 </div>
-                                <div class="col-sm-5 pt-0"> <button type="button" class="btn btn-primary"><i
-                                            class="fas fa-arrow-right px-3 py-2"></i></button>
+                                <div class="col-sm-5 pt-0"> <button type="button" class="btn btn-primary"
+                                        id="payment-btn"><i class="fas fa-arrow-right px-3 py-2"></i></button>
                                 </div>
                             </div>
                         </div>
