--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -60,8 +60,16 @@
                                 Chittoor,
                                 A.P., 517646, India</p>
                             <p><i class="fa fa-paper-plane" aria-hidden="true"></i> info@vaidya.com</p>
-                            <p><i class="fa fa-phone" aria-hidden="true"></i> (+91) 6969696969</p>
+                            <p><i class="fa fa-phone" aria-hidden="true"></i> (+91) 3503393349</p>
                         </div>
+                        <ul class="faq">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/faq">FAQ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/contactus">Contact</a>
+                            </li>
+                        </ul>
                     </div>
                     <div class="col-md-4 space">
                         <div class="subcriber-info">
@@ -78,6 +86,10 @@
                                 </form>
                             </div>
                         </div>
+                    </div>
+
+                    <div class="faq_div">
+
                     </div>
                 </div>
             </div>
