--- a/templates/views/doctors.hbs
+++ b/templates/views/doctors.hbs
@@ -122,8 +122,7 @@
                                                                 </div>
                                                             </td>
                                                             <td>
-                                                                <button class="btn-success"
-                                                                    onclick="location.href = '/bookappointment';">Book
+                                                                <button class="btn-success" id="bookappointmentBtn">Book
                                                                     Appointment</button>
                                                             </td>
                                                         </tr>
