--- a/templates/views/doctorprofile.hbs
+++ b/templates/views/doctorprofile.hbs
@@ -24,17 +24,19 @@
                     </div>
                     <div class="card-body p-1-9 p-xl-5 nameAddress">
                         <div class="mb-4">
-                            <h3 class="h4 mb-0">Dr Ashish Gulati</h3>
-                            <span class="text-primary">General Physician</span>
+                            <h3 class="h4 mb-0">{{doctor.name}}</h3>
+                            <span class="text-primary">{{doctor.category}}</span>
                         </div>
                         <ul class="list-unstyled mb-4">
                             <li class="mb-3"><a href="#!"><i
-                                        class="far fa-envelope display-25 me-3 text-secondary"></i>drgulati@gmail.com</a>
+                                        class="far fa-envelope display-25 me-3 text-secondary"></i>{{doctor.email}}</a>
                             </li>
                             <li class="mb-3"><a href="#!"><i
-                                        class="fas fa-mobile-alt display-25 me-3 text-secondary"></i>9988776655</a></li>
-                            <li><a href="#!"><i class="fas fa-map-marker-alt display-25 me-3 text-secondary"></i>Vasanth
-                                    Vihar, New Delhi India</a></li>
+                                        class="fas fa-mobile-alt display-25 me-3 text-secondary"></i>{{doctor.mobile}}</a>
+                            </li>
+                            <li><a href="#!"><i
+                                        class="fas fa-map-marker-alt display-25 me-3 text-secondary"></i>{{doctor.clinicaddress}}</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -43,9 +45,9 @@
                 <div class="ps-lg-1-6 ps-xl-5">
                     <div class="mb-5 wow fadeIn">
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item description">Category: General Physician</li>
-                            <li class="list-group-item description">Language: Hindi/English</li>
-                            <li class="list-group-item description">Consultant Fess: 400</li>
+                            <li class="list-group-item description">Category: {{doctor.category}}</li>
+                            <li class="list-group-item description">Language: {{doctor.languages}}</li>
+                            <li class="list-group-item description">Consultant Fess: {{doctor.fee}}</li>
                             <li class="list-group-item description">No service in home</li>
                         </ul>
                     </div>
@@ -56,7 +58,7 @@
                                     <div class="card-body education">
                                         <h2 class="mb-0 text-primary">#Education</h2>
                                         <i class="ti-bookmark-alt icon-box medium rounded-3 mb-4"></i>
-                                        <p class="mb-0">All India institute of medical scinece, New Delhi</p>
+                                        <p class="mb-0">{{doctor.edu}}</p>
                                     </div>
                                 </div>
                             </div>
@@ -65,7 +67,8 @@
                                     <div class="card-body experience">
                                         <h2 class="mb-0 text-primary">#Experience</h2>
                                         <i class="ti-medall-alt icon-box medium rounded-3 mb-4"></i>
-                                        <p class="mb-0">About 10 year Experience and professional in general Physician.
+                                        <p class="mb-0">About {{doctor.experience}} year Experience and professional
+                                            in {{doctor.category}}.
                                         </p>
                                     </div>
                                 </div>
