--- a/templates/views/userprofile.hbs
+++ b/templates/views/userprofile.hbs
@@ -9,6 +9,8 @@
     <link rel="shortcut icon" href="/img/userprofile_logo.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/userprofile.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+</head>
 
 <body class="userProfileMain">
     {{>header}}
@@ -20,14 +22,12 @@
                         <div class="card-body photoColumn">
                             <div class="d-flex flex-column align-items-center text-center">
                                 <div class="profile-pic-div">
-                                    <img src="/img/unknown.png" id="photo" style="max-width: 200px; max-height: 400px;">
-                                    <input type="file" id="file" style="margin-top: 7px; margin-left: 60px">
-                                    <br>
-                                    <label for="file" id="uploadBtn">Choose Photo</label>
-                                </div>
-                                <div class="mt-3">
-                                    <h4 id="profilefullname"></h4>
-                                    <p class="text-muted font-size-sm" id="profileaddress"></p>
+                                    <img src="{{user.imgsrc}}" alt="avatar" id="photo">
+                                    <form method="POST" action="/api/users/upload" enctype="multipart/form-data">
+                                        <input type="file" name="image" id="image-input">
+                                        <button type="submit" class="btn btn-primary mx-3"
+                                            id="uploadbtn">Upload</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -40,7 +40,7 @@
                                 <div class="col-sm-3 rowProfileColumn">
                                     <h2 class="mb-0">Full Name</h2>
                                 </div>
-                                <div class="col-sm-9 text-secondary edit" id="fullname">
+                                <div class="col-sm-9 text-secondary edit" id="fullname">{{user.name}}
                                 </div>
                             </div>
                             <hr>
@@ -48,7 +48,7 @@
                                 <div class="col-sm-3 rowProfileColumn">
                                     <h2 class="mb-0">Email</h2>
                                 </div>
-                                <div class="col-sm-9 text-secondary edit" id="email">
+                                <div class="col-sm-9 text-secondary edit" id="email">{{user.email}}
                                 </div>
                             </div>
                             <hr>
@@ -56,7 +56,7 @@
                                 <div class="col-sm-3 rowProfileColumn">
                                     <h2 class="mb-0">Username</h2>
                                 </div>
-                                <div class="col-sm-9 text-secondary edit" id="username">
+                                <div class="col-sm-9 text-secondary edit" id="username">{{user.username}}
                                 </div>
                             </div>
                             <hr>
@@ -64,7 +64,7 @@
                                 <div class="col-sm-3 rowProfileColumn">
                                     <h2 class="mb-0">Mobile</h2>
                                 </div>
-                                <div class="col-sm-9 text-secondary edit" id="mobile">
+                                <div class="col-sm-9 text-secondary edit" id="mobile">{{user.mobile}}
                                 </div>
                             </div>
                             <hr>
@@ -73,16 +73,17 @@
                                     <h2 class="mb-0">Address</h2>
                                 </div>
                                 <div class="col-sm-9 text-secondary edit form-outline mb-4" id="address">
+                                    {{user.address}}
                                 </div>
                             </div>
                             <hr>
                         </div>
                         <div class="profile">
                             <div class="child">
-                                <button type="button" id="editProfile">Edit profile</button>
+                                <button type="button" id="editProfile">Edit Profile</button>
                             </div>
                             <div class="child">
-                                <button type="button" id="saveProfile">Save Profile</button>
+                                <button type="submit" id="saveProfile">Save Profile</button>
                             </div>
                         </div>
                         <br>
@@ -92,7 +93,7 @@
                                     <h2 class="d-flex align-items-center mb-3">
                                         <h2 class="appointmentHistory">Appointment History</h2>
                                     </h2>
-                                    <p>There has been no booking made by you</p>
+                                    <div id="appointments"></div>
                                 </div>
                             </div>
                         </div>
