--- a/templates/views/admin.hbs
+++ b/templates/views/admin.hbs
@@ -12,7 +12,7 @@
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <title>Admin Menu</title>
+  <title>Admin Page</title>
 </head>
 
 <body>
@@ -201,7 +201,7 @@
     </section>
     <div id="patients">
       <div class="card-heading">
-        <h1>Patients</h1>
+        <h1>Users</h1>
       </div>
       <section class="grid" id="patientcontainer">
         <template class="temp" id="patient-template">
@@ -289,7 +289,7 @@
               </div>
               <div class="button">
                 <button class="delete user-delete-btn">
-                  <div class="tooltip">Delete Patient</div>
+                  <div class="tooltip">Delete User</div>
                   <ion-icon name="trash-outline"></ion-icon>
                 </button>
                 <button class="approve user-admin-btn">
@@ -316,12 +316,12 @@
             Remove Doctors
           </div>
         </div>
-        <div class="btncard" id="all-doctors">
+        {{!-- <div class="btncard" id="all-doctors">
           <ion-icon name="person-circle-outline"></ion-icon>
           <div class="card-body">
             All Doctors
           </div>
-        </div>
+        </div> --}}
       </div>
       <div id="approve-doctors-container" class="hide">
         <div class="card-heading">
