--- a/templates/views/verified.hbs
+++ b/templates/views/verified.hbs
@@ -75,15 +75,15 @@
         a {
             text-decoration: none;
             font-size: 30px;
-            color: white;
-            background-color: black;
+            color: black;
             padding: 10px;
             border-radius: 10px;
-
+            border: 2px solid black;
+            background-color: wheat;
         }
 
         a:hover {
-            background-color: gray;
+            background-color: rgb(190, 173, 140);
         }
     </style>
 </head>
@@ -114,7 +114,7 @@
         />
       </svg>
       <h3>${msg2}</h3>
-        <a href="/">Home</a>
+        <a href="/">Go to Homepage</a>
     </div>`
         : `<div style="background-color: #991B1B">
       <h2>${msg1}</h2>
@@ -128,7 +128,7 @@
         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
       </svg>
       <h3>${msg2}</h3>
-        <a href="/">Home</a>
+        <a href="/">Go to Homepage</a>
 
     </div>`;
     document.body.style.backgroundColor = error ? "#7F1D1D" : "#064e3b";
